# static-reflection

./: CMakeLists.txt
include/: TestClass.h  field_traits.h  function_traits.h  traversal.h  type_info.h  variable_traits.h
src/: TestClass.cpp  main.cpp
